--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ main {
     border-radius: 1rem 1rem 1rem 0.5rem;
     background-image: linear-gradient(to right, hsl(293, 100%, 63%), hsl(264, 100%, 61%));
     box-shadow: 1px 1px 1rem -8px grey;
+    color: hsl(270, 20%, 96%);
 }
 
 .price-1 h3,
